[DEV][LoiNLT] Update features: add api search all roles, jobs
